@@ -1,3 +1,7 @@
+2013-02-01 Molnar Karoly <molnarkaroly AT users.sf.net>
+
+	* support/scripts/mcs51-disasm.pl: Small refinements.
+
 2013-01-31 Molnar Karoly <molnarkaroly AT users.sf.net>
 
 	* support/scripts/mcs51-disasm.pl: Use IRAM key in name-list file.
